index file updated

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>Welcome</html> 
+<html>Welcome \n </html>
+
 HOSTNAME=$(hostname)
-sudo echo "<!DOCTYPE html> <html> <body>VM Instance Name: $HOSTNAME
-<p><strong>VM IP Address:<strong> $(hostname -i)</p></body></html>" | sudo tee /usr/local/apache2/htdocs/
+echo "<!DOCTYPE html> <html> <body>VM Instance Name: $HOSTNAME
+<p><strong>VM IP Address:<strong> $(hostname -i)</p></body></html>" | tee /usr/local/apache2/htdocs/index.html
